--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,6 +1,10 @@
 \begin{abstract}
-    In this project, we address the issue of sentiment analysis of twitter message. 
-We collected and preprocessed three types of corpus. Two models, Support Vector Machine(SVM) and  
+\vspace{-3mm}
+    In this project, we address the issue of sentiment analysis of twitter messages. 
+    We collect three corpora from different domains and propose several pre-processing steps based on the nature of the corpus.    
+Features based model and      
 Recursive Neural Tensor Network (RNTN) 
 are evaluated by extensive experiments. 
+Experiment results indicate that RNTN model works better on well formatted text and feature-based model performs better on general topic tweet. 
+To the best of our knowledge, this is the first work on twitter sentiment analysis which accounts sentence structure. 
 \end{abstract}
