--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -1,6 +1,6 @@
 \section{Conclusion}
 \label{sec:conclusion}
-In this project, we evaluate both SVM and RNTN model on the task of twitter sentiment analysis. With the same setup, RNTN model perform better than SVM model. However, due to the lack of the annotated corpus (parse tree with sentiment label) over twitter message, RNTN model has worse performance than  SVM model on sentiment decision over general topic tweet. Domain adaptation of RNTN model from movie review to twitter message gives no significant improvement. 
+In this project, we evaluate both feature-based and RNTN models on the task of twitter sentiment analysis. With the same setup, RNTN model performs better than feature-based model. However, due to the lack of the annotated corpus (parse tree with sentiment label) over twitter messages, RNTN model has worse performance than feature-based model on sentiment decision over general topic tweets. Domain adaptation of RNTN model from movie reviews to twitter messages gives no significant improvement. 
 
 
 
