--- a/report/finalReport.tex
+++ b/report/finalReport.tex
@@ -18,13 +18,14 @@
 \usepackage{lipsum} % for the mock text
 \usepackage{mdframed}
 \usepackage{verbatim}
+\usepackage{subfig}
 
-\title{Twitter sentiment analysis with SVM and RNTN 
+\title{Sentiment Analysis over Twitter Data  
 \thanks{This is the final project report for CS 388 Natural Language Processing at The University of Texas at Austin in  2014 Spring}}
 \author{Yun Wu \qquad Qiren Chen \qquad Xiaofan Lu \\
   University of Texas at Austin \\
  Computer Science Department \\
-  {\tt \{ywu, qiren, xiaofan\}@cs.utexas.edu} \\}
+  {\tt \{ywu, chenqr, xiaofan\}@cs.utexas.edu} \\}
 
 \date{}
 
