--- a/report/future.tex
+++ b/report/future.tex
@@ -4,13 +4,13 @@
 \addtolength{\itemsep}{-0.5\baselineskip}
 
 \item Better pre-processing technique \\
-Due to the noisy nature of twitter message, how well we can preprocess the it matters a lot. How to preserve the structure of the original sentence and filtering out unnecessary information is a changeling task. 
+Due to the noisy nature of twitter messages, how well we can preprocess it matters a lot. How to preserve the structure of the original sentence and filter out unnecessary information is a challenging task. 
 
 \item Better parser for twitter message \\
-As the RNTN is build upon parse tree, the performance of the parser is of great importance to RNTN model. However, most of existing parser, including the one we used (Stanford Parser) are trained on newswire data, which is very different from the twitter message. We believe within a few year, the focus of the research community on twitter message will shift from current POS tagging to building accurate parser. 
+As the RNTN is built upon parse trees, the performance of the parser is of great importance to RNTN model. However, most of existing parsers, including the one we used (Stanford Parser) are trained on newswire data, which is very different from the twitter messages. We believe within a few years, the focus of the research community on twitter message will shift from current POS tagging to building an accurate parser. 
 
 \item Sentiment treebank over twitter message \\
-Our experiments are limited by the fact that there is no labeled sentiment treebank of twitter message. This is largely because that RNTN model has just come out that it has not being touched by the research community. Building our own sentiment treebank would be too much for us as a course project. However, it would be of great help if such a sentiment treebank over twitter message is available to the research community. 
+Our experiments are limited by the fact that there is no labeled sentiment treebank of twitter messages. This is largely because that RNTN model has just come out. Building our own sentiment treebank would be too much for us as a course project. However, it would be of great help if such a sentiment treebank over twitter messages is available to the research community. 
 
 
 \end{itemize}
