--- a/report/ref.tex
+++ b/report/ref.tex
@@ -2,7 +2,7 @@
 %\bibliographystyle{acl}
 %\bibliography{acl2014}
 
-
+\newpage
 \begin{thebibliography}{}
 
 %\bibitem[\protect\citename{Aho and Ullman}1972]{Aho:72}
@@ -59,6 +59,42 @@ Olutobi Owoputi and Chris Dyer and Kevin Gimpel and Nathan Schneider and Noah A.
 \newblock 2013. 
 \newblock Improved part-of-speech tagging for online conversational text with word clusters
 \newblock {\em In Proceedings of NAACL}
+
+\bibitem[\protect\citename{Hu \bgroup et al.\egroup}2004]{Hu:2004},
+Hu M, Liu B. 
+\newblock 2004. 
+\newblock Mining and summarizing customer reviews
+\newblock {\em Proceedings of the tenth ACM SIGKDD international conference on Knowledge discovery and data mining. ACM, 2004: 168-177.}
+
+\bibitem[\protect\citename{Go \bgroup et al.\egroup}2009]{Go:2009},
+ Go A, Bhayani R, Huang L. 
+\newblock 2009. 
+\newblock Twitter sentiment classification using distant supervision
+\newblock {\em CS224N Project Report, Stanford, 2009: 1-12.
+}
+
+\bibitem[\protect\citename{Mohammad \bgroup et al.\egroup}2013]{Mohammad:2013},
+ Go A, Bhayani R, Huang L. 
+\newblock 2013. 
+\newblock NRC-Canada: Building the state-of-the-art in sentiment analysis of tweets
+\newblock {\em arXiv preprint arXiv:1308.6242, 2013.
+}
+
+\bibitem[\protect\citename{Das and Chen}2001]{Das:2001},
+Sanjiv Das and Mike Chen.
+\newblock 2001. 
+\newblock Yahoo! for Amazon: extracting market sentiment from stock message boards.
+\newblock {\em In Proceedings of the 8th Asia Pacific Finance Association Annual Conference.
+}
+
+\bibitem[\protect\citename{Bo \bgroup et al.\egroup}2002]{Bo:2002},
+Pang, Bo; Lillian Lee; and Shivakumar Vaithyanathan.
+\newblock 2002. 
+\newblock Thumbs up? sentiment classification using machine learning techniques. 
+\newblock {\em In Proceedings of the Conference on Empirical Methods in Natural Language Processing. ACL.
+}
+
+
 
 
 
